--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "halbuilder-front-end",
   "version": "0.0.0",
-  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:shengt/halbuilder-client.git"
+  },
+  "dependencies": {
+    "express": "~3.4.3"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
@@ -25,7 +31,8 @@
     "grunt-svgmin": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "grunt-express-server": "~0.4.5"
   },
   "engines": {
     "node": ">=0.8.0"
